# vjscript

./: Dockerfile  Pipfile  README.md  create_font.py  main.py  pyproject.toml
otf_font/: Dockerfile  create_vjscript_font.py  test.html
templates/: index.html
